--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,21 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(day01 sources/utils.cpp sources/day01.cpp)
-
-add_executable(day02 sources/utils.cpp sources/day02.cpp)
-
-add_executable(day03 sources/utils.cpp sources/day03.cpp)
+add_executable(run_all_days
+        sources/utils.cpp
+        sources/day01.cpp
+        sources/day02.cpp
+        sources/day03.cpp
+        sources/day04.cpp
+        sources/run_all.cpp)
 
 add_custom_target(copy_inputs ALL)
-add_dependencies(day01 copy_inputs)
-add_dependencies(day02 copy_inputs)
-add_dependencies(day03 copy_inputs)
+add_dependencies(run_all_days copy_inputs)
 
 add_custom_command(TARGET copy_inputs POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${PROJECT_SOURCE_DIR}/inputs"
-        $<TARGET_FILE_DIR:day01>)
+        $<TARGET_FILE_DIR:run_all_days>)
 
 enable_testing()
 
@@ -38,6 +38,9 @@ target_link_libraries(day02_test GTest::gtest_main)
 
 add_executable(day03_test sources/utils.cpp sources/day03.cpp sources/day03_test.cpp)
 target_link_libraries(day03_test GTest::gtest_main)
+
+add_executable(day04_test sources/utils.cpp sources/day04.cpp sources/day04_test.cpp)
+target_link_libraries(day04_test GTest::gtest_main)
 
 include(GoogleTest)
 gtest_discover_tests(day01_test)
