Updated tests (from Day01 to Day15)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(run_all_days
         sources/run_all.cpp)
 
 add_executable(current_day
-        sources/day13.cpp
+        sources/day16.cpp
         sources/utils.cpp)
 
 find_package(OpenMP)
@@ -52,20 +52,52 @@ add_custom_command(TARGET copy_inputs POST_BUILD
 
 enable_testing()
 
-add_executable(day01_test sources/utils.cpp sources/day01.cpp sources/day01_test.cpp)
+add_executable(day01_test sources/utils.cpp sources/day01.cpp tests/day01_test.cpp)
 target_link_libraries(day01_test GTest::gtest_main)
 
-add_executable(day02_test sources/utils.cpp sources/day02.cpp sources/day02_test.cpp)
+add_executable(day02_test sources/utils.cpp sources/day02.cpp tests/day02_test.cpp)
 target_link_libraries(day02_test GTest::gtest_main)
 
-add_executable(day03_test sources/utils.cpp sources/day03.cpp sources/day03_test.cpp)
+add_executable(day03_test sources/utils.cpp sources/day03.cpp tests/day03_test.cpp)
 target_link_libraries(day03_test GTest::gtest_main)
 
-add_executable(day04_test sources/utils.cpp sources/day04.cpp sources/day04_test.cpp)
+add_executable(day04_test sources/utils.cpp sources/day04.cpp tests/day04_test.cpp)
 target_link_libraries(day04_test GTest::gtest_main)
 
-add_executable(day06_test sources/utils.cpp sources/day06.cpp sources/day06_test.cpp)
+add_executable(day05_test sources/utils.cpp sources/day05.cpp tests/day05_test.cpp)
+target_link_libraries(day05_test GTest::gtest_main)
+
+add_executable(day06_test sources/utils.cpp sources/day06.cpp tests/day06_test.cpp)
 target_link_libraries(day06_test GTest::gtest_main)
+
+add_executable(day07_test sources/utils.cpp sources/day07.cpp tests/day07_test.cpp)
+target_link_libraries(day07_test GTest::gtest_main)
+
+add_executable(day08_test sources/utils.cpp sources/day08.cpp tests/day08_test.cpp)
+target_link_libraries(day08_test GTest::gtest_main)
+
+add_executable(day09_test sources/utils.cpp sources/day09.cpp tests/day09_test.cpp)
+target_link_libraries(day09_test GTest::gtest_main)
+
+add_executable(day10_test sources/utils.cpp sources/day10.cpp tests/day10_test.cpp)
+target_link_libraries(day10_test GTest::gtest_main)
+
+
+add_executable(day11_test sources/utils.cpp sources/day11.cpp tests/day11_test.cpp)
+target_link_libraries(day11_test GTest::gtest_main)
+
+add_executable(day12_test sources/utils.cpp sources/day12.cpp tests/day12_test.cpp)
+target_link_libraries(day12_test GTest::gtest_main)
+
+add_executable(day13_test sources/utils.cpp sources/day13.cpp tests/day13_test.cpp)
+target_link_libraries(day13_test GTest::gtest_main)
+
+add_executable(day14_test sources/utils.cpp sources/day14.cpp tests/day14_test.cpp)
+target_link_libraries(day14_test GTest::gtest_main)
+
+add_executable(day15_test sources/utils.cpp sources/day15.cpp tests/day15_test.cpp)
+target_link_libraries(day15_test GTest::gtest_main)
+
 
 include(GoogleTest)
 gtest_discover_tests(day01_test)
